Added exceptions handlers to @ControllerAdvice Added custom exceptions: EntityNotFoundException, EntityAlreadyExistsException Added check on existing version in framework by db query Added HTTP PATCH method instead PUT Added interface for services: VersionService, JavascriptFrameworkService Added interface for controllers: VersionController, JavascriptFrameworkController